src/assets/App.css
/* ... */
    #SBButton:hover, #SBButton1:hover {
    	background-color: rgba(0,220,255,0.15);
    	color: #00dcff;
    	cursor: pointer;
      border-color: #00dcff;
    }
    #SBButton1 {
      margin-top: 0px;
    }
    
    #createButton {
    	background-color: #0f131c;
    	color: #00dcff;
    	font-family: 'Alegreya Sans SC', sans-serif;
    	font-size: 150%;
    	font-weight: 100;
    	border: 1px solid #00dcff;
    	border-width: 1px 1px 1px 1px;
    	border-radius: 3px;
    	text-align: center;
    	text-decoration: none;
    	width: 50%;
    	margin: 0 auto;
    	padding: 0px;
    	-webkit-transition-duration: 0s;
    	transition-duration: 0s;
    	box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
    	letter-spacing: 10px;
    }
    #createButton:hover {
    	background-color: #00dcff;
    	color: #0f131c;
    	cursor: pointer;
    }
    #createButton:active {
      background-color: #00dcff;
      color: #0f131c;
    }
    #sidebarElements {
    	border: 1px solid #00dcff;
    	border-width: 0px 1px;
    	padding-left: 10px;
    	padding-right: 10px;
    }

/*End SideBar*/

/*Forms*/

#questionTextArea, #answerTextArea, #suggestionTextArea, #commentTextArea {
  text-align: left;
  font-family: 'Alegreya Sans', sans-serif;
  padding: 10px;
  color: #ffffff;
  background-color: #0f131c;
  border: 1px solid #ffffff;
  height: 4em;
  resize: none;
}

#askquestion, #addSuggestion, #addAnswer {
  font-size: 90%;
  color: #00ffdc;
  background-color: #0f131c;
  border: 1px solid #00ffdc;
  border-radius: 2px;
  margin-top: 5px;
}
#addAnswer {
  color: #00dcff;
  border: 1px solid #00dcff;
}
#askquestion:hover, #addAnswer:hover, #addSuggestion:hover, #askquestion:active, #addAnswer:active, #addSuggestion:active  {
  color: #0f131c;
  background-color: #00ffdc;
  cursor: pointer;
}
#addAnswer:hover, #addAnswer:active {
  background-color: #00dcff;
}



/*MoreButton*/

    #moreButton {
    	margin: auto;
    	text-align: center;
    	font-size: 130%;
    	padding: 5px;
    	color: #00ffdc;
    	border: 1px solid #00dcff;
    	border-width: 1px 1px 1px 1px;
    	border-radius: 3px;
    }
    #moreButton:hover {
    	color: #0f131c;
    	background-color: #00ffdc;
      cursor: pointer;
    }
    #welcomeMore {
      margin: auto;
      text-align: center;
      font-size: 120%;
      padding: 5px;
      color: #00ffdc;
      border: 1px solid #00dcff;
      border-width: 1px 0px 0px 0px;
    }
    #welcomeMore:hover {
      color: #0f131c;
      background-color: #00ffdc;
      cursor: pointer;
    }
    #sideBarMore {
      text-align: center;
      font-size: 100%;
      padding: 5px;
      color: #00ffdc;
      border: 1px solid #00dcff;
      border-width: 1px 1px 1px 1px;
      border-radius: 3px;
    }
    #sideBarMore:hover {
      color: #0f131c;
      background-color: #00ffdc;
      cursor: pointer;
    }

/*More Sidebar*/



/*NewsFeed*/

    #newsFeedBox {
    	display: -webkit-box;
    	display: -moz-box;
    	display: -ms-flexbox;
    	display: -webkit-flex;
    	overflow: auto;
    	display: inline-flex;
    	align-items: stretch;
    	flex-direction: row;
    	margin: 1% 1% 1% 1%;
    	border: 1px solid #00dcff;
      width: 98%;
    }
    #newsFeedLeft, #newsFeedRight {
    	color: #dddddd;
    	padding: 0px 10px 0px 10px;
    	/*overflow: scroll !important;*/
    	margin: 5px 5px 10px 5px;
    	flex: 1 1 auto;
    	width: 60%;
    	margin: 0;
    }
    #newsFeedRight {
      width: 72%;
    }
    #newsFeedLeft {
    	width: 28%;
    	border: 1px solid #00dcff;
    	border-width: 0px 1px 0px 0px;
    }
    #avatar {
    	padding: 10px;
    	text-align: center;
    	border-radius: 50%;
    	display: block;
    	margin: 0px auto;
    }
    #avatarImageProfile {
      border: 1px solid #00dcff;
    	border-radius: 50%;
      display: block;
      margin: 0 auto;
      vertical-align: middle;
    }
    #userName {
    	font-size: 200%;
    	text-align: center;
    	line-height: 100%;
    	margin: 10px;
    	padding: 0px;
    	font-family: 'Alegreya Sans SC', sans-serif;
    }
    #userEmail {
    	font-size: 125%;
    	text-align: center;
    	line-height: 100%;
    	margin: 0px;
    	padding: 10px 0px 5px 0px;
    	font-family: 'Alegreya Sans SC', sans-serif;
    }
    #userOptions {
    }
    #newsFeedFieldUnit {
    	background-color: #0f131c;
    	color: #00dcff;
    	font-family: 'Alegreya Sans SC', sans-serif;
    	font-size: 100%;
    	font-weight: 100;
    	border: 1px solid #00dcff;
    	border-width: 1px 1px;
    	border-radius: 3px;
    	text-align: center;
    	text-decoration: none;
    	margin: 5px 0px;
    	letter-spacing: 1px;
    }
    #newsFeedFieldUnit:hover {
    	background-color: #00dcff;
    	color: #0f131c;
    	cursor: pointer;
    }
    #newsFeedFieldUnit:active {
      background-color: #00dcff;
      color: #0f131c;
    }
    #xp {
    	text-align: center;
    }
    #profileSidebarMenu {
    	display: inline-flex;
    	flex-direction: row;
    	width: 100%;
    	border: 1px solid #00dcff;
    	border-width: 1px 1px;
    	border-radius: 3px;
    	margin-bottom: 0px;
    }
    #profileProblemsMenu, #profileSolutionsMenu {
    	flex: 1 1 auto;
    	text-align: center;
    	border: 1px solid #00dcff;
    	border-width: 0px 1px 0px 0px;
    	display: flex;
    	flex-direction: column;
    	justify-conent: center;
    	width: 100%;
    	padding-bottom: 3px;
    }
    #solveTitle, #developTitle {
      flex: 1 1 auto;
    	color: #00dcff;
    	border: 1px solid #00dcff;
    	border-width: 0px 0px 1px 0px;
    	font-size: 80%;
    	padding: 3px 5px 3px 10px;
    	margin: 0px 0px;
    	letter-spacing: 4px;
    }
/* ... */

